k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: shopping-cart-payment
  labels:
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: shopping-cart
    pci-scope: "true"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8084
    targetPort: 8084
    protocol: TCP
  selector:
    app.kubernetes.io/name: payment-service
